--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/GarrettLockhart/social-network-api#readme",
   "dependencies": {
+    "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongodb": "^4.11.0",
